# gary

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: form.java
gary/: __init__.py  agent.py  cli.py  regen.py  shout.py
gary/metagraph/: __init__.py  diff.py  graph_io.py  importer_core.py  importer_llm.py  parser_md.py  parser_sql.py  patch_io.py  schema.py  validation.py
instructions/: 2025-0-10-001.md
samples/markdown/: document.md
samples/sql/: schema.sql
samples/stories/: login.md
samples/xml/: widget.xml
tests/: test_apply_patch.py  test_import_llm.py
