[project]
name = "gary"
version = "0.2.0"
description = "A Test Bed for MetaGraph-Powered LangGraph Agents "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.19",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
]
